2019-05-02  Allen D. Ball  <ball@sol.local>

	* pom.xml:
	Released version 1.0.0.
	Merged ball.ssdp artifact to ball.upnp.ssdp.
