@@ -1,3 +1,8 @@
+2019-09-08  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/ball/upnp/ssdp/SSDPResponse.java:
+	Record the InetAddress from the DatagramPacket.
+
 2019-05-02  Allen D. Ball  <ball@sol.local>
 
 	* pom.xml:
